--- a/index.html
+++ b/index.html
@@ -161,6 +161,22 @@
       </div>
     </header>
 
+    <!-- TECNOLOGIAS -->
+    <section id="tecnologias">
+      <h2>Tecnologias Utilizadas</h2>
+      <p class="section-desc">
+        Ferramentas e tecnologias que utilizo para desenvolver soluções web e análises de dados profissionais.
+      </p>
+      <div class="grid">
+        <div class="card"><h3>HTML5</h3><p>Estruturação semântica e acessível de páginas web modernas.</p></div>
+        <div class="card"><h3>CSS3</h3><p>Layouts responsivos, design moderno e foco em experiência do usuário.</p></div>
+        <div class="card"><h3>JavaScript</h3><p>Interatividade, lógica de negócio no front-end e manipulação de dados.</p></div>
+        <div class="card"><h3>SQL</h3><p>Consulta, organização e análise de dados estruturados.</p></div>
+        <div class="card"><h3>Power BI</h3><p>Criação de dashboards interativos e análises financeiras.</p></div>
+        <div class="card"><h3>Looker Studio</h3><p>Visualização de dados e relatórios executivos orientados a decisão.</p></div>
+      </div>
+    </section>
+
     <!-- SERVIÇOS -->
     <section id="servicos">
       <h2>Serviços</h2>
